# chaosvector-stt

./: .gitignore  CLAUDE.md  README.md  UPSTREAM-CHANGES.md  chaosvector-stt.service  pyproject.toml
src/chaosvector_stt/: __init__.py  __main__.py  backend.py  quality.py  wyoming_server.py
