[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaosvector-stt"
version = "0.1.0"
description = "Pluggable speech-to-text server with Wyoming protocol support"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "numpy>=2.0",
    "wyoming>=1.5",
]

[project.optional-dependencies]
faster-whisper = ["faster-whisper>=1.0"]
openvino = ["openvino>=2024.0", "openvino-genai>=2024.0"]
onnx = ["onnxruntime>=1.20"]
all = ["faster-whisper>=1.0", "openvino>=2024.0", "openvino-genai>=2024.0", "onnxruntime>=1.20"]

[project.scripts]
chaosvector-stt = "chaosvector_stt.wyoming_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chaosvector_stt"]
